@@ -1,5 +1,10 @@
 2007-01-08  Jan Arne Petersen <jap@gnome.org>
 
+	* gnome-settings-dbus.h, gnome-settings-marshal.list: added new files
+	from previous patch to svn.
+
+2007-01-08  Jan Arne Petersen <jap@gnome.org>
+
 	Fixes #133815
 
 	* gnome-settings-multimedia-keys.c: added support for storing the DBus
